fix flexbox with wrap

--- a/src/components/Crypto.css
+++ b/src/components/Crypto.css
@@ -2,4 +2,6 @@
      list-style-type: none;
      padding: 0;
      display: inline-flex;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
  }
